syntax = "proto3";

service ExampleService {
  rpc create (CreateInput) returns (CommandResult) {}
  rpc changeTitle (ChangeTitleInput) returns (CommandResult) {}
}

message CreateInput {
  string aggregateId = 1;
}

message ChangeTitleInput {
  string aggregateId = 1;
  string title = 2;
}

message CommandResult {
  string result = 1;
}
